force-app/main/default/objects/Warehouse__c/fields/Company_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Company_Hierarchy__c</fullName>
    <label>Company Hierarchy</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>Warehouses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>