force-app/main/default/objects/Warehouse__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Warehouses</relationshipLabel>
    <relationshipName>Managed_Warehouses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>