force-app/main/default/objects/Warehouse__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode</label>
    <type>Text</type>
    <length>10</length>
</CustomField>