force-app/main/default/objects/Warehouse__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Text</type>
    <length>50</length>
    <description>State where warehouse is located, used for GST determination</description>
</CustomField>