force-app/main/default/objects/Warehouse__c/fields/Storage_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Storage_Capacity__c</fullName>
    <label>Storage Capacity</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>