force-app/main/default/objects/Warehouse__c/fields/Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Type__c</fullName>
    <label>Warehouse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Central</fullName><default>false</default><label>Central</label></value>
            <value><fullName>Regional</fullName><default>false</default><label>Regional</label></value>
            <value><fullName>Depot</fullName><default>false</default><label>Depot</label></value>
            <value><fullName>C&amp;F</fullName><default>false</default><label>C&amp;F</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>