force-app/main/default/objects/Warehouse__c/validationRules/Warehouse_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Warehouse_Code_Format</fullName>
    <active>true</active>
    <description>Ensures Warehouse Code is 3-20 alphanumeric characters.</description>
    <errorConditionFormula>NOT(REGEX(Warehouse_Code__c, "^[A-Za-z0-9]{3,20}$"))</errorConditionFormula>
    <errorMessage>Warehouse Code must be 3-20 alphanumeric characters.</errorMessage>
</ValidationRule>