force-app/main/default/objects/Warehouse__c/listViews/Active_Warehouses.listView-meta.xml
<ListView>
    <fullName>Active_Warehouses</fullName>
    <columns>NAME</columns>
    <columns>Warehouse_Code__c</columns>
    <columns>State__c</columns>
    <columns>Warehouse_Type__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Warehouses</label>
</ListView>