force-app/main/default/objects/Warehouse__c/listViews/All_Warehouses.listView-meta.xml
<ListView>
    <fullName>All_Warehouses</fullName>
    <columns>NAME</columns>
    <columns>Warehouse_Code__c</columns>
    <columns>State__c</columns>
    <columns>Warehouse_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Warehouses</label>
</ListView>